# discripper

./: .gitignore  ACCEPTANCE_CHECKLIST.md  LICENSE  Makefile  PRD.md  README.md  TASKS.md  VALIDATION_REPORT.md  pyproject.toml
.codex/: AGENTS.md  FINAL_READINESS_CHECKLIST.md  README.md  codex-quick-start.md
.codex/audit/: 82d4fa7b-final-release.audit.md  README.md
.codex/instructions/: 0-work-flow.md  1-seed-task-list.md  3-dev_process.md  CODEX_READINESS_CHECKLIST.md  LOCAL_GATES.md  LOCAL_MODE.md  TASK_TEMPLATE.md
.codex/issues/: phase-x-title-aware.md
.codex/modes/: AUDITOR.md  BLOGGER.md  CODER.md  REVIEWER.md  SWARMMANAGER.md
.codex/notes/: plan-mode-guide.md  reviewer-mode-cheat-sheet.md  swarmmanager-topic.md
.codex/reviews/: 7f3a9c1d-final-signoff.review-note.md  README.md
.codex/tasks/: 4a7d2c19-init-python.md  7c9e2a15-config-loader.md  9b3e6d84-entrypoint.md  README.md  ae56b201-pkg-skeleton.md  d42c9f70-ruff-config.md  f3a1c5d2-pytest-src.md
docs/: metadata-schema.md
samples/: simulated_movie.json  simulated_series.json
scripts/: acceptance.sh  demo.sh
src/discripper/: __init__.py  cli.py  config.py
src/discripper/core/: __init__.py  bluray.py  classifier.py  discovery.py  dvd.py  fake.py  ffprobe.py  metadata.py  metadata_json.py  naming.py  rip.py
tests/: test_acceptance_script.py  test_bluray_stub.py  test_classifier.py  test_cli.py  test_config.py  test_core_models.py  test_demo_script.py  test_docs_defaults.py  test_dvd_inspector.py  test_fake_inspector.py  test_ffprobe_inspector.py  test_installation.py  test_metadata_json.py  test_metadata_stub.py  test_naming.py  test_package.py  test_rip.py  test_samples_naming.py  test_tool_discovery.py
tests/fixtures/: ambiguous_disc.json  sample_disc.json  single_movie_disc.json  six_episode_series.json
