[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discripper"
version = "0.1.0"
description = "Utilities for inspecting and ripping optical discs."
authors = [{ name = "discripper contributors" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
discripper = "discripper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
