[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discripper"
version = "0.1.0"
description = "Utilities for inspecting and ripping optical discs."
authors = [{ name = "discripper contributors" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
discripper = "discripper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
